# github-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: SKILLS.md
src/mcp_github_agent/: __init__.py  github_client.py  issue_discovery.py  llm_client.py  models.py  server.py  workflows.py
