[project]
name = "mcp-github-agent"
version = "0.1.0"
description = "Agentic MCP server for autonomous GitHub issue triage and code reasoning with Ollama."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "agent", "github", "ollama", "autonomy"]
license = "MIT"
authors = [
    { name = "MCP Agent Generator", email = "noreply@example.com" }
]

[project.dependencies]
fastapi = "^0.114.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
httpx = "^0.27.0"
python-dotenv = "^1.1.0"
pydantic = "^2.8.0"

[project.scripts]
run-agent = "mcp_github_agent.server:run_app"
